# elegua

./: .gitignore  .vale.ini  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _typos.toml  gen_ref_pages.py  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.beads/: .beads-credential-key  .gitignore  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml  docs.yml  release.yml
.hooks/: pre-commit
.wai/: AGENTS.md  PLUGINS.md  config.toml
.wai/projects/elegua-core/: .state
architecture/: index.html
chacana/: INTEGRATION.md
chacana/specs/baseline/: spec.md
chacana/specs/core/: spec.md
development/: index.html
docker/: docker-compose.yml
docker/wolfram/: Dockerfile
docs/: architecture.md  development.md  getting-started.md  index.md
docs/guide/: adapters.md  blob-store.md  comparison.md  oracle-servers.md  property-testing.md  tasks.md  toml-format.md
getting-started/: index.html
guide/adapters/: index.html
guide/blob-store/: index.html
guide/comparison/: index.html
guide/oracle-servers/: index.html
guide/property-testing/: index.html
guide/tasks/: index.html
guide/toml-format/: index.html
hooks/: install.sh  pre-commit  pre-push
openspec/: project.md
openspec/changes/add-sympy-adapter/: design.md  proposal.md  tasks.md
openspec/changes/add-test-metadata/: design.md  proposal.md  tasks.md
openspec/changes/integrate-hypothesis/: design.md  proposal.md  tasks.md
openspec/changes/refactor-composition-pipeline/: design.md  proposal.md  tasks.md
openspec/specs/: 2026-01-09-three-layer-testing-architecture.md  2026-03-05-property-test-design.md  2026-03-06-xperm-xtensor-design.md  2026-03-08-elegua-specification.md
openspec/specs/foundations-rfc/: spec.md
reference/SUMMARY/: index.html
reference/elegua/: index.html
search/: search_index.json
src/elegua/: __init__.py  adapter.py  blobstore.py  bridge.py  compare_numeric.py  comparison.py  context.py  errors.py  isolation.py  models.py  multitier.py  oracle.py  property.py  runner.py  snapshot.py  task.py  verdict.py  wolfram.py
tests/: test_adapter.py  test_blobstore.py  test_bridge.py  test_compare_numeric.py  test_comparison.py  test_context.py  test_errors.py  test_isolation.py  test_layers.py  test_models.py  test_multitier.py  test_oracle.py  test_pipeline.py  test_property.py  test_rubi_format.py  test_runner.py  test_snapshot.py  test_state_machine.py  test_sympy_adapter.py  test_sympy_parsing.py  test_task.py  test_tracer.py  test_verdict.py  test_wolfram.py  test_wolfram_kernel.py  xact_builder.py
tests/fixtures/: involution.toml  rubi_exp.toml  rubi_power.toml  rubi_trig.toml  sxact_basic.toml  tracer.toml
tests/integration/: conftest.py  test_echo_oracle.py  test_snapshot_replay.py
tests/snapshots/: test_snapshot_replay.json
(+51 files in other folders)
