[project]
name = "elegua"
version = "0.1.0"
description = "Domain-agnostic multi-tier test harness for validating mathematical equivalence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elegua"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
