[project]
name = "elegua"
version = "0.1.0"
description = "Domain-agnostic multi-tier test harness for validating mathematical equivalence"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
wolfram = [
    "flask>=3.0",
    "wolframclient>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/elegua"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11",
    "pyright>=1.1",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.20",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["elegua"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
exclude = [
    "src/elegua/wolfram/kernel.py",
    "src/elegua/wolfram/server.py",
    "src/elegua/wolfram/__main__.py",
]
